prod_snapshot_2015-09-24_1030/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>AMP_PPC_Start_Date__c</fullName>
        <label>AMP PPC Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Product__c</fullName>
        <formula>IF(OR(ISPICKVAL(Waiting_Status__c, &apos;Live&apos;),ISPICKVAL(Waiting_Status__c, &apos;Fulfilled-Complete&apos;),ISPICKVAL(Waiting_Status__c, &apos;Fulfilled Renewed&apos;)), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ad_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Mactive Ad Number, controlled by Ad Ops</inlineHelpText>
        <label>Ad ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Notice_1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Add Notice 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Product (Add Notice 1)</relationshipLabel>
        <relationshipName>AddContactNotice1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Add_Notice_2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Add Notice 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Product (Add Notice 2)</relationshipLabel>
        <relationshipName>AddContactNotice2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Add_Notice_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Add Notice 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Product (Add Notice 3)</relationshipLabel>
        <relationshipName>AddContactNotice3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affl_Sales_Rep_Name__c</fullName>
        <formula>Affl_Sales_Rep__r.FirstName &amp; &quot; &quot; &amp; Affl_Sales_Rep__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affl Sales Rep Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affl_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affl Sales Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Affiliated_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_by_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved by Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bus_Days_10__c</fullName>
        <formula>Opportunity.Bus_Days_10__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bus Days 10</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bus_Days_3__c</fullName>
        <formula>Opportunity.Bus_Days_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bus Days 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bus_Days_OnBoarded__c</fullName>
        <formula>IF( 
MOD((  OnBoard_Date__c ) - DATE(2000,1,4),7)=0, 
IF(Today() - OnBoard_Date__c &lt;= 3,Today() - OnBoard_Date__c ,(Today() - OnBoard_Date__c ) - ((Today() - OnBoard_Date__c)/7) * 2), 


IF(MOD((OnBoard_Date__c ) - DATE(2000,1,5),7)=0, 
IF(Today() - OnBoard_Date__c &lt;= 2,Today() - OnBoard_Date__c ,(Today() - OnBoard_Date__c ) - (FLOOR(Today() - OnBoard_Date__c )/7) * 2), 


IF(MOD((OnBoard_Date__c ) - DATE(2000,1,6),7)=0, 
IF(Today() - OnBoard_Date__c &lt;= 1,Today() - OnBoard_Date__c ,(Today() - OnBoard_Date__c ) - (FLOOR(Today() - OnBoard_Date__c )/7) * 2), 


IF(MOD((OnBoard_Date__c ) - DATE(2000,1,7),7)=0, 
IF(Today() - OnBoard_Date__c = 0,Today() - OnBoard_Date__c ,(Today() - OnBoard_Date__c ) - (FLOOR(Today() - OnBoard_Date__c )/7) * 2), 


IF(MOD((OnBoard_Date__c ) - DATE(2000,1,8),7)=0, 
IF(Today() - OnBoard_Date__c &lt; 3,0,(Today() - OnBoard_Date__c ) - (FLOOR(Today() - OnBoard_Date__c )/7) * 2), 


IF(MOD((OnBoard_Date__c ) - DATE(2000,1,9),7)=0, 
IF(Today() - OnBoard_Date__c &lt; 2,0,(Today() - OnBoard_Date__c ) - (FLOOR(Today() - OnBoard_Date__c )/7) * 2), 


IF(Today() - OnBoard_Date__c &lt; 5,(Today() - OnBoard_Date__c ),(Today() - OnBoard_Date__c ) - (FLOOR(Today() - OnBoard_Date__c )/7) * 2) + ((FLOOR(Today() - OnBoard_Date__c )/7)-1) 
) 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bus Days (OnBoarded)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bus_Days_SLA__c</fullName>
        <formula>(PricebookEntry.Product2.SLA_Bus_Days__c -  Bus_Days_OnBoarded__c) * (-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bus Days (SLA)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CanCreateILI__c</fullName>
        <formula>Text(Waiting_Status__c) == PricebookEntry.Product2.Invoice_StatusToCreateILI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Can Create ILI&apos;s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CancelType__c</fullName>
        <label>Type of Cancel</label>
        <picklist>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard Cancel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Canceled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Category__c</fullName>
        <label>Cancellation Category</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled Before Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled After Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfilled Non-Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancellation_Detail__c</fullName>
        <description>This Picklist has the sub category for the  cancellation reasons.</description>
        <label>Cancellation Detail</label>
        <picklist>
            <controllingField>Cancellation_Reason__c</controllingField>
            <picklistValues>
                <fullName>Sold outside of deliverables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set unrealistic or no performance expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client not fully explained OB process, frustrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undersold vs recommendation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong product for the client’s goals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales communicated ‘opt out period’ to client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No reason provided from affiliate rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot pay/No budget/Business Closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrealistic expectations, never able to change, not enough time to prioritize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasonality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moving marketing in house</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client refused to give explanation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received better pricing from competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New ‘decision maker’ unwilling to continue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responsiveness/Timeliness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client issue unresolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Performance/Lack of, or irrelevant leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work quality issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over/Under Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed deadline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social: posts never change, eventually lose value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client billed incorrect amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client billed twice in one period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client unhappy with billing procedure (pause policy)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entire spend moved to another G/O product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product down sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product up sell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <picklist>
            <controllingField>Cancellation_Category__c</controllingField>
            <picklistValues>
                <fullName>Sales Expectation Mismatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G/O Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client/Business Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Unresponsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reallocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfilled Non Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Code_Service_End_Date__c</fullName>
        <formula>Service_End_Date__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Service End Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>Opportunity.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_SEO__c</fullName>
        <formula>IF(PricebookEntry.Product2.SEO_Product__c = True,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count SEO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Social__c</fullName>
        <formula>IF( PricebookEntry.Product2.Social_Media_Notice__c = True,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Social</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Web__c</fullName>
        <formula>IF( PricebookEntry.Product2.Web_Development_Product__c = True, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Web</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Delivered__c</fullName>
        <formula>IF(NOT(ISNULL(Live_Date__c)),Live_Date__c, 
IF(AND(NOT(ISNULL(Fulfilled_Date__c)),TEXT(Waiting_Status__c)=&quot;Fulfilled-Complete&quot;),Fulfilled_Date__c,NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Delivered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Field_For_Testing__c</fullName>
        <formula>TODAY() + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Field For Testing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysInStatus_Awaiting_OnBoard__c</fullName>
        <formula>(InStatus_Awaiting_OnBoard__c /60)/24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DaysInStatus Awaiting OnBoard</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysInStatus_InFulfillment2__c</fullName>
        <description>Days in Status In Fulfillment for business days only (no weekends)</description>
        <formula>IF(NOT(ISBLANK( In_Fulfillment_Out_Stamp__c )), 

/* If TRUE */ 
IF( 
/* Is same business week? */ 
AND( 
(CASE(MOD(DATEVALUE(In_Fulfillment_Out_Stamp__c ) - DATE(1985, 1, 5), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0) 
+ CASE(MOD( Project_In_Fulfill_Date__c - DATE(1985, 1, 5), 7), 0, 0, 1, 
5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0) 
&gt;5), 
DATEVALUE(In_Fulfillment_Out_Stamp__c ) - Project_In_Fulfill_Date__c &lt; 6 ), 
/* Then work out the number of business days with this formula */ CASE(MOD(DATEVALUE(In_Fulfillment_Out_Stamp__c ) - DATE(1985, 1, 5), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0) 
+ CASE(MOD(Project_In_Fulfill_Date__c - DATE(1985, 1, 5), 7), 0, 0, 1, 
5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0) 
- 6, 
/* Otherwise use this formula */ 
FLOOR( 
(DATEVALUE(In_Fulfillment_Out_Stamp__c ) 
-(Project_In_Fulfill_Date__c 
+ CASE(MOD(Project_In_Fulfill_Date__c - DATE(1985, 1, 5), 7), 0, 0, 1, 
6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) 
)/7)*5 
+CASE(MOD(Project_In_Fulfill_Date__c - DATE(1985, 1, 5), 7), 0, 0, 1, 
5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0) 
+CASE(MOD(DATEVALUE(In_Fulfillment_Out_Stamp__c ) - DATE(1985, 1, 5), 7), 0, 0, 1, 0, 
2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0) 
-1), 

/* If FALSE */ 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DaysInStatus InFulfillment2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysInStatus_InFulfillment__c</fullName>
        <formula>(InStatus_In_Fulfillment__c /60 )/24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DaysInStatus InFulfillment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysInStatus_Pending__c</fullName>
        <formula>( InStatus_Pending__c /60)/24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DaysInStatus Pending</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysInStatus_WaitingApproval__c</fullName>
        <formula>( InStatus_WaitingApproval__c /60)/24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DaysInStatus WaitingApproval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysInStatus_WaitingResource__c</fullName>
        <formula>( InStatus_WaitingResource__c /60)/24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DaysInStatus WaitingResource</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysInStatus_Waiting_Approval2__c</fullName>
        <formula>IF(NOT(ISBLANK( Project__r.In_Waiting_Approval_Out_Stamp__c )), 

/* If TRUE */ 
IF( 
/* Is same business week? */ 
AND( 
(CASE(MOD(DATEVALUE(Project__r.In_Waiting_Approval_Out_Stamp__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0) 
+ CASE(MOD(DATEVALUE(Project__r.In_Waiting_Approval_Stamp__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 
5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0) 
&gt;5), 
DATEVALUE(Project__r.In_Waiting_Approval_Out_Stamp__c) - DATEVALUE(Project__r.In_Waiting_Approval_Stamp__c) &lt; 6 ), 
/* Then work out the number of business days with this formula */ CASE(MOD(DATEVALUE(Project__r.In_Waiting_Approval_Out_Stamp__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0) 
+ CASE(MOD(DATEVALUE(Project__r.In_Waiting_Approval_Stamp__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 
5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0) 
- 6, 
/* Otherwise use this formula */ 
FLOOR( 
(DATEVALUE(Project__r.In_Waiting_Approval_Out_Stamp__c) 
-(DATEVALUE(Project__r.In_Waiting_Approval_Stamp__c) 
+ CASE(MOD(DATEVALUE(Project__r.In_Waiting_Approval_Stamp__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 
6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) 
)/7)*5 
+CASE(MOD(DATEVALUE(Project__r.In_Waiting_Approval_Stamp__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 
5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0) 
+CASE(MOD(DATEVALUE(Project__r.In_Waiting_Approval_Out_Stamp__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 0, 
2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0) 
-1), 

/* If FALSE */ 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DaysInStatus Waiting Approval2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysIn_Status_Awaiting_Onboard2__c</fullName>
        <formula>IF(NOT(ISBLANK(Project__r.In_Awaiting_Onboard_Out_Stamp__c)), 

/* If TRUE */ 
IF( 
/* Is same business week? */ 
AND( 
(CASE(MOD(DATEVALUE(Project__r.In_Awaiting_Onboard_Out_Stamp__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0) 
+ CASE(MOD(DATEVALUE(Project__r.In_Awaiting_Onboard_Stamp__c)  - DATE(1985, 1, 5), 7), 0, 0, 1, 
5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0) 
&gt;5), 
DATEVALUE(Project__r.In_Awaiting_Onboard_Out_Stamp__c) - DATEVALUE(Project__r.In_Awaiting_Onboard_Stamp__c) &lt; 6 ), 
/* Then work out the number of business days with this formula */ CASE(MOD(DATEVALUE(Project__r.In_Awaiting_Onboard_Out_Stamp__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0) 
+ CASE(MOD(DATEVALUE(Project__r.In_Awaiting_Onboard_Stamp__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 
5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0) 
- 6, 
/* Otherwise use this formula */ 
FLOOR( 
(DATEVALUE(Project__r.In_Awaiting_Onboard_Out_Stamp__c) 
-(DATEVALUE(Project__r.In_Awaiting_Onboard_Stamp__c) 
+ CASE(MOD(DATEVALUE(Project__r.In_Awaiting_Onboard_Stamp__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 
6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) 
)/7)*5 
+CASE(MOD(DATEVALUE(Project__r.In_Awaiting_Onboard_Stamp__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 
5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0) 
+CASE(MOD(DATEVALUE(Project__r.In_Awaiting_Onboard_Out_Stamp__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 0, 
2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0) 
-1), 

/* If FALSE */ 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DaysIn Status Awaiting Onboard2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysIn_Status_Pending2__c</fullName>
        <formula>IF(NOT(ISBLANK( Project__r.In_Pending_Out_Stamp__c )), 

/* If TRUE */ 
IF( 
/* Is same business week? */ 
AND( 
(CASE(MOD(DATEVALUE(Project__r.In_Pending_Out_Stamp__c ) - DATE(1985, 1, 5), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0) 
+ CASE(MOD(DATEVALUE(Project__r.In_Pending_Stamp__c)- DATE(1985, 1, 5), 7), 0, 0, 1, 
5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0) 
&gt;5), 
DATEVALUE(Project__r.In_Pending_Out_Stamp__c ) - DATEVALUE(Project__r.In_Pending_Stamp__c) &lt; 6 ), 
/* Then work out the number of business days with this formula */ CASE(MOD(DATEVALUE(Project__r.In_Pending_Out_Stamp__c ) - DATE(1985, 1, 5), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0) 
+ CASE(MOD(DATEVALUE(Project__r.In_Pending_Stamp__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 
5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0) 
- 6, 
/* Otherwise use this formula */ 
FLOOR( 
(DATEVALUE(Project__r.In_Pending_Out_Stamp__c ) 
-(DATEVALUE(Project__r.In_Pending_Stamp__c) 
+ CASE(MOD(DATEVALUE(Project__r.In_Pending_Stamp__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 
6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) 
)/7)*5 
+CASE(MOD(DATEVALUE(Project__r.In_Pending_Stamp__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 
5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0) 
+CASE(MOD(DATEVALUE(Project__r.In_Pending_Out_Stamp__c ) - DATE(1985, 1, 5), 7), 0, 0, 1, 0, 
2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0) 
-1), 

/* If FALSE */ 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DaysIn Status Pending2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysIn_Status_Waiting_Resource2__c</fullName>
        <formula>IF(NOT(ISBLANK( Project__r.In_Waiting_Resource_Out_Stamp__c )), 

/* If TRUE */ 
IF( 
/* Is same business week? */ 
AND( 
(CASE(MOD(DATEVALUE(Project__r.In_Waiting_Resource_Out_Stamp__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0) 
+ CASE(MOD(DATEVALUE(Project__r.In_Waiting_Resource_Stamp__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 
5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0) 
&gt;5), 
DATEVALUE(Project__r.In_Waiting_Resource_Out_Stamp__c) - DATEVALUE(Project__r.In_Waiting_Resource_Stamp__c) &lt; 6 ), 
/* Then work out the number of business days with this formula */ CASE(MOD(DATEVALUE(Project__r.In_Waiting_Resource_Out_Stamp__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0) 
+ CASE(MOD(DATEVALUE(Project__r.In_Waiting_Resource_Stamp__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 
5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0) 
- 6, 
/* Otherwise use this formula */ 
FLOOR( 
(DATEVALUE(Project__r.In_Waiting_Resource_Out_Stamp__c) 
-(DATEVALUE(Project__r.In_Waiting_Resource_Stamp__c) 
+ CASE(MOD(DATEVALUE(Project__r.In_Waiting_Resource_Stamp__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 
6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) 
)/7)*5 
+CASE(MOD(DATEVALUE(Project__r.In_Waiting_Resource_Stamp__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 
5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0) 
+CASE(MOD(DATEVALUE(Project__r.In_Waiting_Resource_Out_Stamp__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 0, 
2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0) 
-1), 

/* If FALSE */ 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DaysIn Status Waiting Resource2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysWithGLErr__c</fullName>
        <formula>DATEVALUE(Live_Date__c) - Opportunity.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DaysWithGOErr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysWithGL__c</fullName>
        <description>DateValue(Live_Date__c)- OnBoard_Date__c - 
(CASE(MOD( OnBoard_Date__c- DATE(1985,6,24),7), 
  0 , CASE( MOD( DateValue(Live_Date__c)- OnBoard_Date__c, 7),1,0,2,0,3,0,4,0,5,1,6,2,0), 
  1 , CASE( MOD( DateValue(Live_Date__c)- OnBoard_Date__c, 7),0,0,1,0,2,0,3,0,4,0,5,2,2), 
  2 , CASE( MOD( DateValue(Live_Date__c)- OnBoard_Date__c, 7),0,0,1,0,2,0,3,1,2), 
  3 , CASE( MOD( DateValue(Live_Date__c)- OnBoard_Date__c, 7),0,0,1,0,2,1,2), 
  4 , CASE( MOD( DateValue(Live_Date__c)- OnBoard_Date__c, 7),0,0,1,1,2), 
  5 , CASE( MOD( DateValue(Live_Date__c)- OnBoard_Date__c, 7),0,1,2), 
  6 , CASE( MOD( DateValue(Live_Date__c)- OnBoard_Date__c, 7),6,2,1),
  999)
  +
  (FLOOR(( DateValue(Live_Date__c)- OnBoard_Date__c)/7)*2))

- ((InStatus_WaitingApproval__c/60)/24)
- ((InStatus_WaitingResource__c /60)/24)</description>
        <formula>(InStatus_Awaiting_OnBoard__c +  InStatus_In_Fulfillment__c)/1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DaysWithGO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_In_Status_CWtoDigAM__c</fullName>
        <description>Business days in status Closed Won - new formula and new status:
1) Calculate the total number of days between two dates
2) figure out how many weekend days are between the two dates and subtract them out of the result
3) Add adjustment for the Floor function error when the days are offset in the week</description>
        <formula>/* First-Order Calculation, subtract the dates */
DateValue( Project__r.In_Closed_Won_Out_Stamp__c )- DateValue( Project__r.In_Closed_Won_Stamp__c )
/* Second-Order calculation, remove the weekends */
- (FLOOR((DateValue(Project__r.In_Closed_Won_Out_Stamp__c)-    DateValue(Project__r.In_Closed_Won_Stamp__c))/7)*2)
/* Third-order calculation, adjust for rounding errors based on days of week */
- IF((MOD( DateValue(Project__r.In_Closed_Won_Stamp__c)- DATE(2000,1,2),7) = 6
   &amp;&amp; MOD( DateValue(Project__r.In_Closed_Won_Out_Stamp__c) - DATE(2000,1,2),7) != 6)
   ||(MOD( DateValue(Project__r.In_Closed_Won_Stamp__c)- DATE(2000,1,2),7) != 6
   &amp;&amp; MOD( DateValue(Project__r.In_Closed_Won_Out_Stamp__c) - DATE(2000,1,2),7) = 6), 1,
   IF(MOD(DateValue(Project__r.In_Closed_Won_Stamp__c)- DATE(2000,1,2),7)
      &gt; MOD(DateValue(Project__r.In_Closed_Won_Out_Stamp__c) - DATE(2000,1,2),7), 2, 0))</formula>
        <label>Days In Status CW To DigAM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_To_Go_Live__c</fullName>
        <formula>if( ISNULL( Live_Date__c ),null,   DATEVALUE(Live_Date__c ) -DATEVALUE( Opportunity.Closed_Won_Time_Stamp__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days To Go Live</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_To_Live__c</fullName>
        <description>Days to go live in the SLA calculation; set by Product SLA Services class on Opportunity Product status change to Live.</description>
        <label>Days To Live</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Include_In_Monthly_Total__c</fullName>
        <description>The Formula Field that displays &quot;true&quot; or &quot;false&quot; based on the value on the related Product</description>
        <formula>IF (PricebookEntry.Product2.Include_In_Monthly_Total__c = True,&quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Formula Field that displays &quot;true&quot; or &quot;false&quot; based on the value on the related Product</inlineHelpText>
        <label>Default Include In Monthly Total</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dig_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dig Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dig_AM_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Digital_No_Start_Date_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital No Start Date Req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_Product__c</fullName>
        <formula>IF(PricebookEntry.Product2.Digital_No_Start_Date_Req__c  = True,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digital Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Earliest_Timestamp__c</fullName>
        <description>Pull the earliest timestamp from the project in an effort to make the Days in Status CW to DigAM assigned compile. It looks like the earliest Timestamp formula is counted in the compilation characters</description>
        <formula>Project__r.Earliest_Timestamp__c</formula>
        <label>Earliest Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_CPM__c</fullName>
        <description>SR-2867/DEV-962: Jumpstart and Finance users need the ability to see, edit and report on this information</description>
        <label>Email - CPM</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email_Recipients_Qty__c</fullName>
        <description>SR-2867/DEV-962: Jumpstart and Finance users need the ability to see, edit and report on this information</description>
        <label>Email - Recipients Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Of_Service_Date__c</fullName>
        <label>End Of Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Date the Contract Expires - changed from this code to new due to inaccuracies - 10/14/2013

&quot;Date(
Year(DateValue(Live_Date__c))+ if(Month(DateValue(Live_Date__c)) + Quantity=12,0,Floor((Month(DateValue(Live_Date__c)) +  Quantity)/12)),

IF(Mod(Month(DateValue(Live_Date__c)) + Quantity ,12)=0,12,Mod(Month(DateValue(Live_Date__c)) + Quantity ,12)),

IF(
Day(DateValue(Live_Date__c))&gt;28, 28, Day(DateValue(Live_Date__c))
)
)&quot;</description>
        <formula>End_Of_Service_Date__c</formula>
        <inlineHelpText>Date the Contract Expires (Go Live Date plus Number of Payment Periods)</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpireNoticeDate__c</fullName>
        <formula>Expiration_Date__c - 14</formula>
        <label>ExpireNoticeDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fulfilled_Date__c</fullName>
        <inlineHelpText>If/When product newly enters a Fulfilled status, a value of that present moment will be placed here.</inlineHelpText>
        <label>Fulfillment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FulfillmentStatus__c</fullName>
        <description>This field has been added for the PPC - G/O Care Case with Fulfillment Status report</description>
        <label>Fulfillment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WaitingOnLandingPage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fulfillment Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Full_Charge_Amt__c</fullName>
        <formula>TotalPrice +  Setup_Fee_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Charge Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HTML_Fee__c</fullName>
        <description>SR-2867/DEV-962: Jumpstart and Finance users need the ability to see, edit and report on this information</description>
        <label>HTML Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Has_ILI__c</fullName>
        <formula>Project__r.Has_ILI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has ILI&apos;S</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InStatus_Awaiting_OnBoard__c</fullName>
        <defaultValue>0</defaultValue>
        <label>InStatus Awaiting OnBoard</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
</CustomObject>